--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container">
       <div class="picture">
-        <img src="images/milad.jpg" />
+        <img src="images/photo_2025-11-13_07-07-20.jpg" />
       </div>
 
-      <h1>milad bahrami</h1>
+      <h1>Amir Nimaei</h1>
       <p>full stack web developer</p>
 
       <div class="socials">
@@ -25,5 +25,6 @@
         <i class="bi bi-whatsapp"></i>
       </div>
     </div>
+    <script src=""></script>
   </body>
 </html>
