--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <h1>Amir Nimaei</h1>
-      <p>full stack web developer</p>
+      <p>front end web developer</p>
 
       <div class="socials">
         <i class="bi bi-instagram"></i>
